<resources>
    <string name="app_name">CookBook</string>
    <string name="action_settings">Settings</string>

    <string name="search">Search</string>
    <string name="search_hint">Search</string>
    <string name="app_label">Search</string>
    <string name="new_recipe">New recipe</string>
    <string name="ingredients">Ingredients</string>
    <string name="steps">Steps</string>
    <string name="category">Category</string>
    <string name="name">Name</string>

    <string-array name="recipe_categories">
        <item>Starter</item>
        <item>Soup</item>
        <item>Main Course</item>
        <item>Dessert</item>
        <item>Other</item>
    </string-array>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="addnewingredient">addNewIngredient</string>
    <string name="btncancel">Cancel</string>
    <string name="btnsave">Save</string>
    <string name="newRecipeActivity">NewRecipeActivity</string>
    <string name="removeIngredient">removeIngredient</string>
</resources>